--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -44,11 +44,13 @@ Make a Histogram From the `steps_per_day` data frame
 ```{r}
 
 steps_per_day %>% 
-  ggplot(aes(x = date, y = totalSteps)) +
-  geom_histogram(stat = "identity") + 
-  ggtitle("Total Steps Taken Per Day") +
+  ggplot(aes(x = totalSteps)) +
+  geom_histogram(bins = 8) + 
+  ggtitle("Total Steps Taken Per Day Histogram") +
   xlab("Total Steps") + 
   ylab("Date")
+
+
 ```
 
 Calculate the mean and median steps for each day
@@ -135,8 +137,8 @@ Make a Histogram From the `steps_per_day_imputted` data frame
 ```{r}
 
 steps_per_day_imputted %>% 
-  ggplot(aes(x = date, y = totalSteps)) +
-  geom_histogram(stat = "identity") + 
+  ggplot(aes(x = totalSteps)) +
+  geom_histogram(bins = 8) + 
   ggtitle("Total Steps Taken Per Day") +
   xlab("Total Steps") + 
   ylab("Date")
